[package]
name = "rust-img-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
tokio = { version = "1.20.1", features = ["full"] }
reqwest = "0.11.11"
ansi_term = "0.12"
ansi-to-tui = "1.0.1"
